<resources>
    <string name="app_name">Totals</string>
    <string name="logo_string">T 0 T A L 5</string>
    <string name="option_skip">Skip</string>
    <string name="option_continue">Continue</string>
    <string name="option_get_started">Get started</string>
    <string name="option_ok">OK</string>
    <string name="option_logout">Log out</string>
    <string name="option_stay_logged_in">Stay logged in</string>
    <string name="option_keep_editing">Keep editing</string>
    <string name="option_close">Close page</string>
    <string name="option_remove">Remove</string>
    <string name="option_cancel">Cancel</string>
    <string name="option_save">Save</string>
    <string name="option_delete">Delete</string>
    <string name="option_next">Next</string>
    <string name="option_send">Send</string>
    <string name="option_accept">Accept</string>
    <string name="option_unfollow">Unfollow</string>
    <string name="option_block_user">Block user</string>
    <string name="option_uninvite">Uninvite</string>
    <string name="option_unblock">Unblock</string>
    <string name="option_report">Submit report</string>
    <string name="tooManyRequestsError">Too many requests sent. Please try again later.</string>
    <string name="requestUnavailableError">Sorry, we cannot process this request at this time. Please try again later.</string>
    <string name="copiedToClipboardMessage">Text copied to clipboard.</string>
    <string name="httpsString">https://</string>
    <string name="httpString">http://</string>
    <string name="searchFieldHint">Search users</string>
    <string name="introText1">Welcome to Totals,\n\n\n\na social\nproductivity app</string>
    <string name="introText2">Keep up with your\nfriends\' progress\n\nand help them stay\non top of their goals</string>
    <string name="introText3">Add &amp; complete goals\nby capturing a live photo\nbefore your set due time</string>
    <string name="introText4">Missed your due date?\nIt\'s OK!\n\n\nThere\'s still a 24-hour\ngrace period to post\nbefore time is up!</string>
    <string name="invitesSectionTitle">Invites</string>
    <string name="profilesSectionTitle">Following</string>
    <string name="blockUserOption">Block invites from this user</string>
    <string name="unfollowProfileOption">Unfollow profile</string>
    <string name="openProfileOption">Open profile</string>
    <string name="unfollowProfilePrompt">Are you sure you want to\nunfollow this profile?</string>
    <string name="blockUserPrompt">Are you sure you want to block invites from this user?</string>
    <string name="blockUserDetails">You will also unfollow any other profiles you are currently following from this user.</string>
    <string name="newPostsCountText">%1$s new posts</string>
    <string name="oneNewPostCountText">1 new post</string>
    <string name="allGoalsFilterOption">All Goals</string>
    <string name="myGoalsProfileTitle">My Goals</string>
    <string name="scheduleSectionTitle">Schedule</string>
    <string name="activeSectionTitle">Due Now</string>
    <string name="goalViewDateTextString">%1$s at %2$s</string>
    <string name="goalViewSingleDateTextString">Due: %1$s</string>
    <string name="goalViewNextDateTextString">Next Due: %1$s</string>
    <string name="goalViewProgressTextString">%1$s completed</string>
    <string name="goalPostedString">Current goal ended</string>
    <string name="postCountString">(%1$s posts)</string>
    <string name="timeRemainingString">Time remaining: %1$s</string>
    <string name="tapToPostNowString">Tap to post now!</string>
    <string name="dayDueString">Due %1$s</string>
    <string name="timeDueString">at %1$s</string>
    <string name="xOthersString">%1$s others</string>
    <string name="xAndYString">%1$s and %2$s</string>
    <string name="xLikedAPostString">%1$s liked a post</string>
    <string name="postLikesNotifsTitle">Post Likes</string>
    <string name="postLikesNotifsDetails">%1$s Profile</string>
    <string name="markAsIncompletePrompt">Are you sure you want to post this goal as incomplete?</string>
    <string name="markAsNotRequiredPrompt">Are you sure you want to post this goal as not required?</string>
    <string name="deleteAndMarkAsIncompletePrompt">Delete post &amp; repost as incomplete?</string>
    <string name="deleteAndMarkAsNotRequiredPrompt">Delete post &amp; repost as not required?</string>
    <string name="markAsNotRequiredForDateOption">Post as not required for %1$s</string>
    <string name="markAsIncompleteForDateOption">Post as incomplete for %1$s</string>
    <string name="markAsIncompleteOption">Post as incomplete</string>
    <string name="markAsNotRequiredOption">Post as not required</string>
    <string name="incompleteDetailsString">incomplete for %1$s</string>
    <string name="notRequiredDetailsString">not required for %1$s</string>
    <string name="postGoalProgressOption">Post a photo to complete this goal</string>
    <string name="editGoalOption">Edit goal</string>
    <string name="deleteGoalOption">Delete goal</string>
    <string name="deleteGoalPrompt">Are you sure you want\nto permanently delete\nthis goal?</string>
    <string name="selectLabelTitle">Select a Label</string>
    <string name="postPreviewHeader">Post Preview:</string>
    <string name="progressPageTitle">%1$s Profile</string>
    <string name="progressPageTitleDetails">Posts by %1$s</string>
    <string name="totalsSectionTitle">Totals</string>
    <string name="postsSectionTitle">Posts</string>
    <string name="postViewDateTextString">Goal: %1$s at %2$s</string>
    <string name="postViewPostedTextString">Posted: %1$s at %2$s</string>
    <string name="percentGoalsCompletedLabelString">of Goals Completed</string>
    <string name="percentGoalsCompletedInfoString">Based on the last 100 attempted goals</string>
    <string name="totalGoalsCompletedLabelString">Total Goals Completed</string>
    <string name="goalTitleCompletedLabelString">%1$s</string>
    <string name="seeAllTotalsOption">View all</string>
    <string name="postAttachmentsTitle">Attachments</string>
    <string name="attachmentsUpdatedMessage">Attachments updated</string>
    <string name="labelsUpdatedMessage">Labels updated</string>
    <string name="sendProfileToText">Send %1$s Profile</string>
    <string name="profileSentMessage">Profile sent</string>
    <string name="confirmUninviteUserPrompt">Are you sure you want\nto uninvite this user?</string>
    <string name="confirmRemoveFollowerPrompt">Are you sure you want\nto remove this follower?</string>
    <string name="invitedSectionTitle">Invited</string>
    <string name="followersSectionTitle">Followers</string>
    <string name="userUninvitedMessage">User uninvited</string>
    <string name="followerRemovedMessage">Follower removed</string>
    <string name="titleAndTimeDueString">%1$s at %2$s</string>
    <string name="reportOption">Report post</string>
    <string name="reportInfo">Call authorities for immediate emergencies</string>
    <string name="setTotalsTodayOption">Reset totals for posts after today</string>
    <string name="setTotalsAllPostsOption">Reset totals for all posts</string>
    <string name="showingTotalsForDateInfo">Currently set for posts after %1$s</string>
    <string name="sendProfileOption">Send profile to other users</string>
    <string name="manageFollowersOption">Manage profile followers</string>
    <string name="profileFollowersTitle">Manage profile followers</string>
    <string name="startGoalLikeThisOption">Start a goal like this</string>
    <string name="startGoalLikeThisInfo">Opens a new goal copying info from this post</string>
    <string name="closePostAttachmentsPageDialogDetails">The changes to your post\'s\nattachments will not be saved.</string>
    <string name="closeManageLabelsPageDialogDetails">The changes to your post\'s\nlabels will not be saved.</string>
    <string name="repostAsIncompleteOption">Repost as incomplete</string>
    <string name="repostAsIncompleteInfo">Post will be deleted &amp; reposted as incomplete</string>
    <string name="repostAsNotRequiredOption">Repost as not required</string>
    <string name="repostAsNotRequiredInfo">Post will be deleted &amp; reposted as not required</string>
    <string name="seeAttachmentsOption">See attachments</string>
    <string name="manageAttachmentsInfo">Manage notes &amp; links attached to this post</string>
    <string name="bothAttachedInfo">Notes &amp; links are attached to this post</string>
    <string name="notesAttachedInfo">Notes are attached to this post</string>
    <string name="linksAttachedInfo">Links are attached to this post</string>
    <string name="includedLabelsInfo">Labels: %1$s</string>
    <string name="deletePostOption">Delete post</string>
    <string name="deletePostInfo">This action will repost this goal as incomplete.</string>
    <string name="seePostLikesOption">See post likes</string>
    <string name="peopleLikedInfo">%1$s people liked this post</string>
    <string name="personLikedInfo">1 person liked this post</string>
    <string name="confirmDeletePostPrompt">Are you sure you want\nto delete this post?</string>
    <string name="confirmDeletePostMessage">Deleting this post will count against your totals.</string>
    <string name="seePhotoOption">See photo</string>
    <string name="seePhotoInfo">Opens the photo taken for this post</string>
    <string name="resetTotalsTodayDialogPrompt">Reset the Totals for\ngoals posted after today?</string>
    <string name="resetTotalsTodayDialogDetails">The totals will disregard all past posts.</string>
    <string name="resetTotalsAllDialogPrompt">Reset the Totals to\nreflect all posted goals?</string>
    <string name="resetTotalsAllDialogDetails">The totals will reset to show all\ngoals posted since the beginning.</string>
    <string name="resetTotalsString">Reset totals</string>
    <string name="totalsUpdatedMessage">Totals updated</string>
    <string name="profileTotalsPageTitle">%1$s Profile Totals</string>
    <string name="reportHint">Reason for report</string>
    <string name="reportPostPrompt">Report post</string>
    <string name="emptyReportReasonMessage">Please provide a brief description on why you are reporting this post.</string>
    <string name="postReportedMessage">Post reported</string>
    <string name="postAgainstStandardsPrompt">Your post was deleted</string>
    <string name="postAgainstStandardsDetails">Your post of \"%1$s\" posted on %2$s was deleted (&amp; reposted as not required) because it went against our community standards.\n\nFor further inquiries, please email: totalsproductivityapp@gmail.com</string>
    <string name="userBannedPrompt">You have been banned</string>
    <string name="userBannedDetails">After reviewing your account, we found that your activity went against our community standards.\n\nFor further inquiries, please email: totalsproductivityapp@gmail.com</string>
    <string name="removeFromCalendarString">Remove from calendar</string>
    <string name="removeFromCalendarInfo">Clears added date &amp; repeating days</string>
    <string name="repeatEveryString">Repeat every &#8230;</string>
    <string name="chooseCalendarDialogDetails">Date &amp; time are required to save a goal</string>
    <string name="sunString">SUN</string>
    <string name="monString">MON</string>
    <string name="tueString">TUE</string>
    <string name="wedString">WED</string>
    <string name="thuString">THU</string>
    <string name="friString">FRI</string>
    <string name="satString">SAT</string>
    <string name="missedDueDateActionOption">Choose missed due time action</string>
    <string name="setInactiveOption">Set inactive</string>
    <string name="missedDueDateSetInactiveSelectedDetails">Sets goal inactive if due time missed</string>
    <string name="missedDueDateSetAutoPostsAsIncompleteDetails">Auto-posts as incomplete if due time missed</string>
</resources>