<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_3sdp"
        android:background="@drawable/layout_rounded_pressed_dialog"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_7sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/removeDateOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_12sdp"
            android:background="@drawable/transition_default_bottomsheet"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_12sdp"
                android:src="@drawable/ic_remove_white"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/removeFromCalendarString"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/removeFromCalendarInfo"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorLightText"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:text="@string/missedDueDateActionOption"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/chooseCalendarDialogDetails"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorLightText"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/setInactiveOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_12sdp"
            android:background="@drawable/transition_default_bottomsheet">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_12sdp"
                android:src="@drawable/ic_cancelled"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/setInactiveOption"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/missedDueDateSetInactiveSelectedDetails"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorLightText"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/postAsIncompleteOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_12sdp"
            android:background="@drawable/transition_default_bottomsheet">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_12sdp"
                android:src="@drawable/ic_missed"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/markAsIncompleteOption"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/missedDueDateSetAutoPostsAsIncompleteDetails"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorLightText"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>