<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp"
    android:background="@drawable/rounded_dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:ellipsize="end"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/blockUserPrompt"
        android:textColor="@color/colorTextSelected"
        android:textSize="@dimen/_18sdp" />

    <TextView
        android:id="@+id/detailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/blockUserDetails"
        android:textColor="@color/colorTextSelected"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:id="@+id/blockUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:padding="@dimen/_8sdp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/transition_button_colored">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/_14sdp"
            android:text="@string/option_block_user"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorTextButtonColored"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:padding="@dimen/_8sdp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/_14sdp"
            android:text="@string/option_cancel"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white"/>

    </LinearLayout>


</LinearLayout>